# argentina-inflation-analysis

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  find_inflation_id.py  pyproject.toml  requirements.txt  {}
.github/workflows/: ci.yml  update_data.yml
dashboard/: app.py
data/processed/: inflacion_mensual_acumulada.csv  worldbank_indicators.csv
data/raw/: bcra_inflation_monthly.csv  worldbank_inflation.csv
scripts/: run_analysis.py  run_analysis_monthly.py  run_etl.py
src/argentina_inflation_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/extract/: bcra.py  worldbank.py
src/transform/: calculate.py
src/utils/: config.py  logging.py
tests/: test_bcra.py  test_calculate.py  test_config.py  test_etl.py  test_indicators.py  test_simple.py  test_worldbank.py
