[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argentina-inflation-analysis"
version = "0.1.0"
description = "Pipeline automático para datos de inflación en Argentina"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Lucas", email = "tuemail@ejemplo.com"},
]
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pytest>=7.0.0",
    "tabulate>=0.9.0",
    "openpyxl>=3.0.0",
    "streamlit>=1.25.0",
]

[project.optional-dependencies]
dev = ["black", "flake8", "pre-commit", "ruff", "pytest-cov"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.coverage.run]
omit = [
    "src/analysis/forecast.py",
    "src/analysis/indicators.py",
    "src/extract/bcra.py",
    "src/load/database.py",
    "src/load/saver.py",
    "src/report/plots.py",
    "src/report/tables.py",
    "src/transform/clean.py",
    "src/transform/harmonize.py",
    "src/utils/dates.py"
]